# faq_chatbot

./: .env.sample  Dockerfile  README.md  pyproject.toml
app/: main.py
app/controller/: file_uploader.py  llm.py  user.py
app/database/: database.py
app/model/: models.py
app/services/: llm.py
app/utils/: prompts.py
tests/: __init__.py  conftest.py
tests/controller/: __init__.py  test_file_uploader.py  test_llm_controller.py  test_user.py
tests/database/: test_database.py
tests/services/: test_llm.py
tests/utils/: test_tools.py
